# algorithms

./: README.md
lab/: README.md
lab/zadanie1/: lista_jednokierunkowa.c  lista_jednokierunkowa.h  main.c
lab/zadanie10/: 1k_cykl.c  1k_cykl.h  2k_cykl.c  2k_cykl.h  main.c
lab/zadanie11/: 1k_cykl.c  1k_cykl.h  main.c
lab/zadanie12/: 1k_cykl.c  1k_cykl.h  main.c
lab/zadanie13/: kolejka_priorytetowa.c  kolejka_priorytetowa.h  main.c
lab/zadanie14/: DrzewoBinarneLancuchowZnakowychUporzadkowane.c  DrzewoBinarneLancuchowZnakowychUporzadkowane.h  main.c
lab/zadanie15/: DrzewoBinarneLancuchowZnakowychUporzadkowane.c  DrzewoBinarneLancuchowZnakowychUporzadkowane.h  main.c
lab/zadanie16/: main.c
lab/zadanie17/: definicje.h  konsola.c  main.c  system.c
lab/zadanie18/: 3_drzewo.c  3_drzewo.h  main.c
lab/zadanie2/: lista_jednokierunkowa.c  lista_jednokierunkowa.h  main.c
lab/zadanie21/: main.c
lab/zadanie22/: funkcje.c  funkcje.h  main.c
lab/zadanie25/: fifo.c  fifo.h  graf.c  graf.h  main.c
lab/zadanie3/: 1k.c  1k.h  main.c
lab/zadanie4/: 1k.c  1k.h  main.c
lab/zadanie5/: lista_jednokierunkowa.c  lista_jednokierunkowa.h  (+1 more)
skorowidz/: CMakeLists.txt  Ogolne.c  Ogolne.h  README.md  Skorowidz.c  Skorowidz.h  main.c
skorowidz-projekt/: ListaStron.c  ListaStron.h  main.c
tutorial/list1/: CMakeLists.txt  dodatkowe-cykliczna.c  dodatkowe-dwukierunkowa.c  dodatkowe.c  lista1.h  main.c  zadanie1.c  zadanie10.c  zadanie11.c  zadanie12.c  zadanie13.c  zadanie14.c  zadanie2.c  zadanie3.c  zadanie4.c  zadanie5.c  zadanie6.c  zadanie7.c  zadanie8.c  zadanie9.c
(+35 files in other folders)
