cmake_minimum_required(VERSION 3.17)
project(lista1 C)

set(CMAKE_C_STANDARD 90)

add_executable(lista1 main.c lista1.h zadanie1.c zadanie2.c zadanie3.c zadanie4.c zadanie5.c zadanie6.c zadanie8.c zadanie9.c zadanie10.c dodatkowe.c zadanie11.c dodatkowe-dwukierunkowa.c zadanie12.c dodatkowe-cykliczna.c zadanie13.c zadanie14.c zadanie7.c)